footer gray and gray-darker

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,9 +74,9 @@ footer {
   border-top: 1px solid #eaeaea;
   color: $gray-light;
   a {
-  color: #555;
+  color: $gray;
     &:hover {
-      color: #222;
+      color: $gray-darker;
     }
   }   
   small {
